estilos al temario con grid

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -45,9 +45,9 @@
                     <div class="uk-flex uk-flex-right">
                         <span uk-icon="icon: close; ratio: 1.2"/>
                     </div>
-                    <ul class="uk-breadcrumb">
+                    <div>
 
-                    </ul>
+                    </div>
                 </div>
             </div>
             <div class="uk-margin-large-top uk-flex uk-flex-between uk-flex-wrap">
