estilos a close sesion de vista dashboard

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -14,16 +14,17 @@
         <f:event type="postValidate" listener="#{grupoAlumnoControlador.validaParametro}"/>
     </f:metadata>
     <ui:define name="menu">
-        <div>
+
             <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
                <!-- <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>-->
                 <li><h:link outcome="tablero" value="#{etiqueta['home']}"/></li>
                 <li><span>Student Administration</span></li>
-                <li class="borde-menu2">
-                    <h:form><h:commandButton action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
-                </li>
             </ul>
+
+        <div class="borde-menu2">
+            <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="#{etiqueta['close.sesion']}"/></h:form>
         </div>
+
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
         </div>
