estilos a close sesion de vistas profesor

--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -70,7 +70,7 @@
                         <li data-uk-filter-control=".#{nivel}" class="#{nivel}"><a href="#">Level #{nivel}</a></li>
                     </ui:repeat>
                 </ul>
-                <div class="uk-margin-medium-top uk-flex uk-flex-right">
+                <div class="uk-margin-medium-top uk-flex uk-flex-right regresa-asigna">
                     <h:form id="formulario-asignar-tarea">
                         <h:inputHidden id="input-actividad" value="#{asignarActividadControlador.actividad}"/>
                         <h:commandButton id="boton-enviar"
