--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -13,18 +13,19 @@
         <f:viewAction action="#{tareaAlumnoControlador.detalle}"/>
     </f:metadata>
     <ui:define name="menu">
-        <div>
+
             <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
               <!-- <li ><h:link outcome="dashboard-maestro" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
                <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>-->
                 <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
                 <li><h:link outcome="tablero" value="Student Administration"/></li>
                 <li><span>Student Homework</span></li>
-                <li class="boton-cerrar">
-                    <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
-                </li>
             </ul>
+
+        <div>
+            <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
         </div>
+
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
         </div>
@@ -53,7 +54,7 @@
                     <!--<li data-uk-filter-control=".tarea-card"><a href="#">Tareas</a></li>
                     <li data-uk-filter-control=".nivel-card "><a href="#">Asignación de nivel</a></li>-->
                 </ul>
-                <div class="uk-grid" uk-grid="">
+                <div class="uk-grid elimina" uk-grid="">
                     <div class="uk-width-1-3@m uk-first-column uk-margin-bottom">
                         <div class="uk-card uk-card-default uk-card-small color-card-six margen-one">
                             <div class="uk-card-header border-card">
