se implementa el resource bundle a cerrar sesion en todas las vistas de profesor

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -23,7 +23,7 @@
             </ul>
 
         <div>
-            <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
+            <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="#{etiqueta['close.sesion']}"/></h:form>
         </div>
 
         <div class="uk-navbar-left uk-hidden@m">
