--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -23,7 +23,7 @@
                 <li><h:link outcome="tareas" value="Think-Develop And Share"/></li>
                 <li><span>Rate Think-Develop And Share</span></li>
                 <li>
-                    <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
+                    <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="#{etiqueta['close.sesion']}"/></h:form>
                 </li>
             </ul>
 
