Se remueve el filtro de 7 ultimos dias

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -99,6 +99,7 @@
                                 <div class="uk-grid uk-margin-small-left uk-child-width-1-1@m" uk-grid="">
                                     <div class="">
                                         <div class="">
+                                            <ui:remove>
                                             <div uk-form-custom="target: > * > span:first-child">
                                                 <select class="width-select" disabled="disabled">
                                                     <option value="1">Ultimos 7 Dias</option>
@@ -112,6 +113,7 @@
                                                     <span uk-icon="icon: chevron-down"/>
                                                 </button>
                                             </div>
+                                            </ui:remove>
                                         </div>
                                     </div>
                                 </div>
