--- a/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
@@ -28,12 +28,12 @@
                 <h:form id="formulario-" rendered="#{not empty grupoControlador.cicloEscolarModeloMapa}">
                     Ciclo escolares:
                     <h:selectOneMenu id="seleccion-ciclo-escolar" value="#{grupoControlador.cicloEscolar}">
-                        <f:selectItem value="#{null}" itemValue="#{etiqueta['select']}"/>
+                        <f:selectItem itemValue="#{null}" itemLabel="#{etiqueta['select']}" noSelectionOption="true"/>
                         <f:selectItems value="#{grupoControlador.cicloEscolarModeloMapa.entrySet().toArray()}"
                                        var="cicloEscolarModelo"
                                        itemValue="#{cicloEscolarModelo.key}"
                                        itemLabel="#{cicloEscolarModelo.value.descripcion}"/>
-                        <f:ajax listener="#{grupoControlador.busca}" render="formulario-grupo"/>
+                        <f:ajax listener="#{grupoControlador.busca}" render="formulario-grupo formulario-modal-cicloEscolar:ciclo-escolar"/>
                     </h:selectOneMenu>
                 </h:form>
             </div>
@@ -43,9 +43,9 @@
                         <div class="uk-card-header">
                             <div class="uk-grid uk-grid-small">
                                 <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">Grupos</span></h4></div>
-                                <div class="uk-width-expand uk-text-right panel-icons">
+                                <h:panelGroup rendered="#{not empty grupoControlador.cicloEscolar}" layout="block" class="uk-width-expand uk-text-right panel-icons">
                                     <a href="#" class="uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-grupo" uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
-                                </div>
+                                </h:panelGroup>
                             </div>
                         </div>
                         <div class="uk-card-body">
@@ -116,6 +116,9 @@
                     </div>
                     <div class="uk-modal-body">
                         <div uk-grid="">
+                            <div class="uk-width-1-1@s">
+                                <h:outputText id="ciclo-escolar" value="Agregar grupo en el cilo escolar: #{grupoControlador.cicloEscolarModelo.descripcion}"/>
+                            </div>
                             <div class="uk-width-1-1@s uk-width-1-2@m">
                                 <h:outputLabel value="Grado" for="grado"/>
                                 <div class="uk-form-controls">
@@ -147,7 +150,7 @@
                         <button type="reset" class="uk-button uk-button-default uk-margin-small-right">#{boton['cancel']}</button>
                         <h:commandButton id="enviar-grupo" value="#{boton['add']}" styleClass="uk-button uk-button-primary">
                             <f:ajax execute="grado grupo"
-                                    listener="#{cicloEscolarControlador.agregarGrupo}"
+                                    listener="#{grupoControlador.agrega}"
                                     render="@form formulario-grupo"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalGrupo') }"/>
                         </h:commandButton>
@@ -155,6 +158,7 @@
                 </h:form>
             </div>
         </h:panelGroup>
+        <h:outputScript library="js" name="administracion/grupo.js"/>
     </ui:define>
 </ui:composition>
 
