implementación de 2 funciones en javascript

--- a/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
@@ -136,6 +136,7 @@
                                 <h:outputLabel value="Grupo" for="grupo"/>
                                 <div class="uk-form-controls">
                                     <h:inputText id="grupo"
+                                                 pt:oninput="mayuscula(event)"
                                                  value="#{grupoControlador.grupoModelo.grupo}"
                                                  class="uk-input">
                                         <f:validateRequired/>
