--- a/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
@@ -208,6 +208,9 @@
                 </div>
             </div>
         </h:panelGroup>
+        <div class="uk-flex uk-flex-right">
+            <h:button outcome="ir-atras" styleClass="uk-button uk-button-primary uk-margin-top" value="atras"/>
+        </div>
         <h:outputScript library="js" name="administracion/grupo.js"/>
     </ui:define>
 </ui:composition>
