--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -108,14 +108,14 @@
                             </div>
                         </div>
                         <div class="uk-width-2-5@m uk-width-1-1@s">
-                            <h:outputText styleClass="uk-form-label uk-text-capitalize" for="licencias" value="Personal" />
+                            <h:outputText styleClass="uk-form-label uk-text-capitalize uk-text-center" for="licencias" value="Personal"/>
                             <div class="uk-form-controls uk-flex uk-flex-right">
-                                <h:link styleClass="uk-button uk-button-primary uk-margin-right" outcome="coordinador">
+                                <h:link styleClass="uk-button uk-button-primary uk-margin-right btn-estilo" outcome="coordinador">
                                     <h:outputText value="Coordinadores" styleClass="uk-margin-small-right"/>
                                     <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
                                     <f:param name="escuela" value="#{param['escuela']}"/>
                                 </h:link>
-                                <h:link styleClass="uk-button uk-button-primary" outcome="profesor">
+                                <h:link styleClass="uk-button uk-button-primary btn-estilo" outcome="profesor">
                                     <h:outputText value="Profesores" styleClass="uk-margin-small-right"/>
                                     <h:outputText styleClass="uk-icon" pt:uk-icon="icon: users"/>
                                     <f:param name="escuela" value="#{param['escuela']}"/>
