--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -81,7 +81,7 @@
                         data-grado="#{profesorGrupoControlador.grupoModelo.grado}">
                     reporte
                 </button>
-<!--                <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base" >agregar</button>-->
+                <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base" >agregar</button>
             </div>
         </div>
 
